# VulnHunter

./: .dockerignore  .gitignore  1.txt  1txt.txt  5.txt  ADVANCED_TRAINING_PROGRESS.md  AI_ML_UPGRADE_SUMMARY.md  AZURE_ML_PRODUCTION_DEPLOYMENT_SUCCESS.md  BEAST_MODE_CONFERENCE_PRESENTATION.md  BEAST_MODE_RESEARCH_SUMMARY.md  BEAST_MODE_SLIDE_DECK.html  BETTER_TARGETS_SCAN_RESULTS.md  CLEANUP_SUMMARY.md  CODE4RENA_TRAINING_SUCCESS_REPORT.md  COLAB_TRAINING_GUIDE.md  COMPLETE_SKY_ANALYSIS_WITH_ALL_MODULES.md  COMPLETE_VULNERABILITY_VALIDATION_REPORT.md  COMPLETE_VULNHUNTER_SUMMARY.md  COMPREHENSIVE_SCAN_COMPLETE.md  COMPREHENSIVE_TESTING_SYSTEM.md  CONFERENCE_DEMO_SCRIPT.py  DATASET_TRAINING_SUMMARY.md  DETAILED_VULNERABILITY_REPORTS.md  DOCKER_README.md  DOTNET_COMPREHENSIVE_POC_REPORT.md  Dockerfile  Dockerfile.vulnhunter  ENHANCED_TRAINING_README.md  ENHANCED_VULNHUNTER_SUMMARY.md  EXECUTION_COMPLETE.md  EXECUTIVE_SUMMARY_HANDOUT.md  FINAL_COMPREHENSIVE_ARCHIVE_TRAINING_REPORT.md  FINAL_COMPREHENSIVE_TRAINING_REPORT.md  FINAL_REAL_WORLD_TRAINING_SUMMARY.md  FINAL_STATUS_AND_NEXT_ACTIONS.md  FINAL_SUMMARY.md  FINAL_SYSTEM_STATUS.md  FINAL_ULTIMATE_VULNHUNTER_UNIVERSAL_ACHIEVEMENT_REPORT.md  FIRST_VULNERABILITY_COMPLETE.md  FULL_TRAINING_COMPLETION_SUMMARY.md  (+297 more)
api/: vulnhunter_api.py
archive/: README.md  azure_cli_analysis_results.json  azure_train.py  azure_train_vulnhunter_v7_massive_scale.py  chainlink_staking_analysis_20251015_045830.json  correlation_engine_demo.py  correlation_engine_demo_results.json  critical_issues_analysis.json  critical_issues_report.py  distributed_massive_scale_setup.py  enhance_smart_contract_datasets.py  enhancement_blueprint.txt  prepare_full_datasets.py  prepare_production_datasets.py  prepare_real_datasets.py  realistic_correlation_demo.py  realistic_correlation_results.json  reproduce_all_findings.py  setup_cpu_workspace.sh  setup_new_azure_account.sh  setup_payg_subscription.sh  setup_payg_workspace.sh  simple_ml_train.py  train_gpu_optimized.py  train_ncasv3_style.py  train_payg_enhanced.py  train_production_demo.py  train_production_full.py  train_v5_azure.py  train_v5_cpu.py  vulnhunter_v4_correlation_engine.py  vulnhunter_v4_production_model.py  vulnhunter_v4_test_summary.json
archive_legacy_configs/: azure_environment_setup.yml  azure_ml_workspace_config.yml  simple_job.yml  vulnhunter_cpu_job.yml  vulnhunter_job_20251023_092116.yml
archive_legacy_models/: advanced_vulnhunter_training.py  azure_cli_deployment.py  azure_cpu_deployment.py  azure_deployment_script.py  azure_vulnhunter_production_training.py  combine_vulnhunter_models.py  monitor_vulnhunter_training.py
archive_old_files/: VulnHunter_Infinity_Fixed_Scheduler.ipynb  VulnHunter_Infinity_T4_Optimized.ipynb  VulnHunter_Infinity_Training_Complete_Fixed.ipynb  VulnHunter_Infinity_Training_Part1_Fixed.ipynb  VulnHunter_Infinity_Training_Part2_Fixed.ipynb  VulnHunter_Infinity_Training_Part3_Fixed.ipynb  VulnHunter_Infinity_VulnSynth_Training_Part1.ipynb  VulnHunter_Infinity_VulnSynth_Training_Part2.ipynb  VulnHunter_Infinity_VulnSynth_Training_Part3.ipynb  VulnHunter_Infinity_VulnSynth_Training_Part4_Complete.ipynb  VulnHunter_Omega_Complete.ipynb
azure_minimal_500k/: README.md
azure_ml_retraining/: AZURE_ML_RETRAINING_RESULTS.md  COMPREHENSIVE_AZURE_RETRAINING_PLAN.md  REAL_AZURE_TRAINING_FINAL_RESULTS.md  azure_ml_deployment_config.py  azure_ml_pipeline.py  comprehensive_data_collector.py  real_azure_ml_training.py  simplified_data_collector.py
benchmark_results/: NFV_BENCHMARK_REPORT.md  nfv_benchmark_results.json
benchmark_validation_results/: vulnhunter_enhanced_benchmark_report.json
bnb_chain_analysis/: BNB_CHAIN_COMPREHENSIVE_VULNERABILITY_REPORT.md  BNB_CHAIN_CRITICAL_VULNERABILITY_REPORTS.md  BNB_Chain_Security_Analysis_Summary.md  COMPARATIVE_ANALYSIS_RESULTS.md  VHS_OMEGA_BREAKTHROUGH_FINAL_REPORT.md  bnb_chain_comparative_analysis_20251024_132945.json  comparative_analysis.py  (+4 more)
(+1138 files in other folders)
